...

    Column {
        Box(
            modifier = Modifier
                .fillMaxSize()
                .zIndex(1f)
                .testTag("success_animation"),
            contentAlignment = Alignment.Center
        ) {
            AnimatedLoader(
                modifier = Modifier
                    .fillMaxWidth()
                    .height(200.dp)
...
